# Breakout_Game_Qt_Cplusplus

./: Breakout.bat  Breakout.sh  CMakeLists.txt  README.md  dockerfile
assets/: ball.xcf
executable_linux/: Breakout  libQt6Core.so.6  libQt6DBus.so.6  libQt6Gui.so.6  libQt6OpenGL.so.6  libQt6Widgets.so.6  libQt6XcbQpa.so.6
inc/: ball.h  breakout.h  brick.h  common.h  controller.h  log_manager.h  paddle.h
inc/model/: ball.h  brick.h  model.h  paddle.h
inc/view/: main_window.h
src/: CMakeLists.txt  ball.cpp  breakout.cpp  brick.cpp  controller.cpp  controller.h  game.cpp  log_manager.h  main.cpp  paddle.cpp
src/backend/: CMakeLists.txt  arena_boundary.cpp  arena_boundary.h  collision_detectors.cpp  collision_detectors.h  common.h  config.h  config_prod.cpp  config_prod.h  game_loop.cpp  game_loop.h  game_manager.cpp  game_manager.h  graphics_scene.cpp  graphics_scene.h  movement_vector.cpp  movement_vector.h  screen_text_display.cpp  screen_text_display.h  world_boundary.cpp  world_boundary.h
src/backend/model/: ball.cpp  ball.h  brick.cpp  brick.h  brick_factory.cpp  brick_factory.h  bricks_container.cpp  bricks_container.h  bricks_manager.cpp  bricks_manager.h  custom_graphics_item.cpp  custom_graphics_item.h  direction.cpp  direction.h  game_result_manager.cpp  game_result_manager.h  game_state_manager.cpp  game_state_manager.h  model.cpp  model.h  paddle.cpp  paddle.h
src/frontend/: CMakeLists.txt  graphics_view.cpp  graphics_view.h  gui_config.h  main_window.cpp  main_window.h
src/model/: ball.cpp  brick.cpp  model.cpp  paddle.cpp
src/view/: main_window.cpp
